--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "clsx": "^1.2.1",
+    "framer-motion": "^10.12.4",
+    "lucide-react": "^0.280.0",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "framer-motion": "^10.12.4",
     "react-hook-form": "^7.0.0",
-    "zod": "^3.0.0",
-    "clsx": "^1.2.1",
-    "lucide-react": "^0.280.0",
-    "@hookform/resolvers": "^2.9.11",
-    "react-intersection-observer": "^9.4.3"
+    "react-intersection-observer": "^9.4.3",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.7",
-    "postcss": "^8.4.21",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.14",
-    "typescript": "^5.5.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.9.3"
   }
 }
