--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.12.4",
     "lucide-react": "^0.280.0",
     "next": "^14.0.0",
+    "next-intl": "^4.5.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.0.0",
