--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "clsx": "^1.2.1",
+    "resend": "^4.0.0",
     "framer-motion": "^10.12.4",
     "lucide-react": "^0.280.0",
     "next": "^14.0.0",
